test/corpus/use.txt
=====================================
Use declarations and qualified calls
=====================================

use reader
use reader::score

fn main() {
  reader::score()
  book.reader::read_and_judge()
}
---

(source
  (use_declaration
    (use_keyword)
    (use_path
      namespace: (ident)))
  (use_declaration
    (use_keyword)
    (use_path
      namespace: (ident)
      (double_colon)
      name: (ident)))
  (function
    (fn_signature
      (fn_keyword)
      (ident)
      (param_list
        (paren_open)
        (paren_close)))
    (body
      (brace_open)
      (statement
        (expression
          (function_call
            namespace: (ident)
            (double_colon)
            name: (ident)
            (paren_open)
            (paren_close))))
      (statement
        (expression
          (member_expression
            lhs: (expression
              (ident))
            operator: (member_call_operator)
            rhs: (expression
              (function_call
                namespace: (ident)
                (double_colon)
                name: (ident)
                (paren_open)
                (paren_close))))))
      (brace_close))))
